reflecting namespace for the template
It may be confusing for customers, we'd need to align with https://help.nexmo.com/hc/en-us/articles/360029517191

--- a/definitions/messages-olympus.yml
+++ b/definitions/messages-olympus.yml
@@ -569,7 +569,7 @@ components:
         name:
           type: string
           description: 'The name of the template. For WhatsApp use "WhatsApp_namespace:template_name"'
-          example: 'whatsapp:hsm:technology:nexmo:verify'
+          example: 'WhatsApp_namespace:template_name'
         parameters:
           type: array
           items:
