Add description for whatsapp template format

--- a/definitions/messages-olympus.yml
+++ b/definitions/messages-olympus.yml
@@ -568,7 +568,7 @@ components:
       properties:
         name:
           type: string
-          description: 'The name of the template. For WhatsApp use "WhatsApp_namespace:template_name"'
+          description: 'The name of the template. For WhatsApp use your Whatsapp namespace (available via Facebook Business Manager), followed by a colon `:` and the name of the template to use.'
           example: 'WhatsApp_namespace:template_name'
         parameters:
           type: array
