Set explicit OAS_PATH in review apps for clarity

--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
       "OAS_CI": {
           "description": "Disable the OAS constraint in the renderer to allow all available definitions",
           "value": "true"
-      }
+      },
+      "OAS_PATH": "./"
   },
   "formation": {
   },
