added items type

--- a/definitions/voice.yml
+++ b/definitions/voice.yml
@@ -367,6 +367,8 @@ paths:
                         type: string
                     ncco:
                       type: array
+                      items:
+                        type: string
                       example: '[{"action": "talk", "text": "hello world"}]'
                       description: Can be used instead of `url` for `transfer` only.
       responses:
