--- a/definitions/verify.yml
+++ b/definitions/verify.yml
@@ -419,6 +419,183 @@ paths:
                 oneOf:
                   - $ref: '#/components/schemas/controlResponse'
                   - $ref: '#/components/schemas/controlErrorResponse'
+  '/psd2/{format}':
+    get:
+      operationId: verifyRequestWithPSD2
+      summary: Payment Standards Directive Verify Request
+      description: >-
+        Use Verify request to generate and send a PIN to your user to authorise a payment:
+
+        1. Create a request to send a verification code to your user.
+
+        2. Check the `status` field in the response to ensure that your request
+        was successful (zero is success).
+
+        3. Use the `request_id` field in the response for the Verify check.
+
+      parameters:
+        - $ref: '#/components/parameters/format'
+        - name: number
+          required: true
+          in: query
+          description: >-
+            The mobile or landline phone number to verify. Unless you are
+            setting `country` explicitly, this number must be in
+            [E.164](https://en.wikipedia.org/wiki/E.164) format.
+          schema:
+            type: string
+          example: '447700900000'
+        - name: country
+          required: false
+          in: query
+          description: >-
+            If you do not provide `number` in international format or you are not
+            sure if `number` is correctly formatted, specify the two-character country
+            code in `country`. Verify will then format the number for you.
+          schema:
+            type: string
+          example: GB
+        - name: payee
+          required: true
+          in: query
+          description: >-
+            An alphanumeric string to indicate to the user the name of the recipient
+            that they are confirming a payment to.
+          schema:
+            type: string
+            maxLength: 30
+          example: Online Retailer Inc
+        - name: amount
+          required: true
+          in: query
+          description: >-
+            A decimal amount for the payment to be confirmed.
+          schema:
+            type: number
+            format: float
+          example: '48.00'
+        - name: sender_id
+          required: false
+          in: query
+          description: >-
+            An 11-character alphanumeric string that represents the [identity of the sender](https://developer.nexmo.com/messaging/sms/guides/custom-sender-id) 
+            of the verification request. Depending on the destination of the phone number you are sending the verification SMS to,
+            restrictions might apply.
+          schema:
+            type: string
+            maxLength: 11
+            default: VERIFY
+          example: RETAILER
+        - name: code_length
+          required: false
+          in: query
+          description: The length of the verification code.
+          schema:
+            type: integer
+            enum:
+              - 4
+              - 6
+            default: 4
+          example: 6
+        - name: lg
+          required: false
+          in: query
+          description: >-
+            By default, the SMS or text-to-speech (TTS) message is generated in
+            the locale that matches the `number`. For example, the text message
+            or TTS message for a `33*` number is sent in French. Use this
+            parameter to explicitly control the language, accent and gender used
+            for the Verify request.
+          example: en-us
+          schema:
+            type: string
+            default: en-us
+            enum:
+              - de-de
+              - en-au
+              - en-gb
+              - en-us
+              - en-in
+              - es-es
+              - es-mx
+              - es-us
+              - fr-ca
+              - fr-fr
+              - is-is
+              - it-it
+              - ja-jp
+              - ko-kr
+              - nl-nl
+              - pl-pl
+              - pt-pt
+              - pt-br
+              - ro-ro
+              - ru-ru
+              - sv-se
+              - tr-tr
+              - zh-cn
+              - zh-tw
+        - name: pin_expiry
+          required: false
+          in: query
+          description: >-
+            How log the generated verification code is valid for, in seconds.
+            When you specify both `pin_expiry` and `next_event_wait` then
+            `pin_expiry` must be an integer multiple of `next_event_wait`
+            otherwise `pin_expiry` is defaulted to equal next_event_wait. See
+            [changing the event
+            timings](https://developer.nexmo.com/verify/guides/changing-default-timings).
+          schema:
+            type: integer
+            minimum: 60
+            maximum: 3600
+            default: 300
+          example: 240
+        - name: next_event_wait
+          required: false
+          in: query
+          description: >-
+            Specifies the wait time in seconds between attempts to deliver the
+            verification code. 
+          schema:
+            type: integer
+            minimum: 60
+            maximum: 900
+            default: 300
+          example: 120
+        - name: workflow_id
+          required: false
+          in: query
+          description: >-
+            Selects the predefined sequence of SMS and TTS (Text To Speech)
+            actions to use in order to convey the PIN to your user. For example,
+            an id of 1 identifies the workflow SMS - TTS - TTS. For a list of
+            all workflows and their associated ids, please visit the [developer
+            portal](https://developer.nexmo.com/verify/guides/workflows-and-events).
+          schema:
+            type: integer
+            default: 1
+            enum:
+              - 1
+              - 2
+              - 3
+              - 4
+              - 5
+          example: 4
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/requestResponse'
+                  - $ref: '#/components/schemas/requestErrorResponse'
+            text/xml:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/requestResponse'
+                  - $ref: '#/components/schemas/requestErrorResponse'
 components:
   parameters:
     format:
