Explicitly use free dynos for review apps

--- a/app.json
+++ b/app.json
@@ -15,6 +15,10 @@
       "OAS_PATH": "./"
   },
   "formation": {
+    "web": {
+      "quantity": 1,
+      "size": "free"
+    }
   },
   "name": "api-specification",
   "scripts": {
