--- a/definitions/subaccounts.yml
+++ b/definitions/subaccounts.yml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 servers:
   - url: 'https://api.nexmo.com'
 info:
-  version: 1.0.0
+  version: 1.0.1
   title: Subaccounts API
   description: >-
     The Nexmo Subaccounts API enables you to create subaccounts under your primary account. Subaccounts facilitate differential product configuration, reporting, and billing.
@@ -217,14 +217,14 @@ paths:
           required: true
           schema:
             type: string
-          example: 2019-07-15T13:11:44Z
+          example: '2019-07-15T13:11:44Z'
         - name: end_date
           in: query
           description: End of the retrieval period. If absent then all transfers until now is returned.
           required: false
           schema:
             type: string
-          example: 2019-07-15T14:11:44Z
+          example: '2019-07-15T14:11:44Z'
         - name: subaccount
           in: query
           description: Subaccount to filter by. You may send this multiple times to filter on multiple subaccounts
@@ -305,14 +305,14 @@ paths:
           required: true
           schema:
             type: string
-          example: 2019-07-15T13:11:44Z
+          example: '2019-07-15T13:11:44Z'
         - name: end_date
           in: query
           description: End of the retrieval period. If absent then all transfers until now is returned.
           required: false
           schema:
             type: string
-          example: 2019-07-15T14:11:44Z
+          example: '2019-07-15T14:11:44Z'
         - name: subaccount
           in: query
           description: Subaccount to filter by. You may send this multiple times to filter on multiple subaccounts
