Add note on restriction and link to overview. (#154)
* Add note on restriction and link to overview.

* Increment version number.

* Relative link

--- a/definitions/subaccounts.yml
+++ b/definitions/subaccounts.yml
@@ -2,10 +2,10 @@ openapi: 3.0.0
 servers:
   - url: 'https://api.nexmo.com'
 info:
-  version: 1.0.1
+  version: 1.0.2
   title: Subaccounts API
   description: >-
-    The Nexmo Subaccounts API enables you to create subaccounts under your primary account. Subaccounts facilitate differential product configuration, reporting, and billing.
+    The Nexmo Subaccounts API enables you to create subaccounts under your primary account. Subaccounts facilitate differential product configuration, reporting, and billing. The Subaccounts API is released initially with restricted availability. You can read more about the API in the [Subaccounts documentation](/account/subaccounts/overview).
   contact:
     name: Nexmo DevRel
     email: devrel@nexmo.com
