--- a/definitions/developer/messages.yml
+++ b/definitions/developer/messages.yml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
-  title: Nexmo Messages API
-  version: 1.0.0
+  title: Nexmo Message Search API
+  version: 1.0.1
   description: >-
     The Messages API lets you retrieve messages you have sent via the SMS API by
     ID, as well as retrieve details of messages that were rejected.
