fix typo where leg uuid is referred to incorrectly

--- a/definitions/voice.yml
+++ b/definitions/voice.yml
@@ -465,7 +465,7 @@ paths:
       schema:
         type: string
       required: true
-      description: UUID of the Call
+      description: UUID of the Leg
       example: 63f61863-4a51-4f6b-86e1-46edebcf9356
     put:
       security:
@@ -538,7 +538,7 @@ paths:
       schema:
         type: string
       required: true
-      description: UUID of the Call
+      description: UUID of the Leg
       example: 63f61863-4a51-4f6b-86e1-46edebcf9356
     put:
       security:
@@ -623,7 +623,7 @@ components:
     uuid:
       type: string
       format: uuid
-      title: The UUID of the Call
+      title: The UUID of the Leg
       example: 63f61863-4a51-4f6b-86e1-46edebcf9356
       description: >-
           The unique identifier for this call leg. The UUID is created when
