--- a/definitions/voice.yml
+++ b/definitions/voice.yml
@@ -391,7 +391,7 @@ paths:
       schema:
         type: string
       required: true
-      description: UUID of the Leg
+      description: UUID of the Call Leg
       example: 63f61863-4a51-4f6b-86e1-46edebcf9356
     put:
       security:
@@ -465,7 +465,7 @@ paths:
       schema:
         type: string
       required: true
-      description: UUID of the Leg
+      description: UUID of the Call Leg
       example: 63f61863-4a51-4f6b-86e1-46edebcf9356
     put:
       security:
@@ -538,7 +538,7 @@ paths:
       schema:
         type: string
       required: true
-      description: UUID of the Leg
+      description: UUID of the Call Leg
       example: 63f61863-4a51-4f6b-86e1-46edebcf9356
     put:
       security:
